--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,9 @@
-*.csharp linguist-detectable=false  
+*.csharp linguist-detectable=true  
 *.java linguist-detectable=true  
-*.js linguist-detectable=false  
-*.html linguist-detectable=false  
-*.xml linguist-detectable=true
+*.js linguist-detectable=true  
+*.html linguist-detectable=true  
+*.xml linguist-detectable=true  
+google-services.json linguist-detectable=true
+google-services.gradle linguist-detectable=true
+.gradle linguist-detectable=true
+.idea/ linguist-detectable=true
